# Old_SpringEngine

./: .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  CMakeSettings.json  SpringEngine.cpp
include/SpringEngine/: SpringEngine.h
include/SpringEngine/Components/: CameraComponent.hpp
include/SpringEngine/Core/: Application.hpp  AudioCore.hpp  Component.hpp  DataManager.hpp  EventListener.hpp  Layer.hpp  LayerStack.hpp  Quaternion.hpp  Scene.hpp  SceneElement.hpp  SpringObject.hpp  Vector2.hpp  Vector3.hpp  Window.hpp
include/SpringEngine/Events/: Event.hpp  WindowEvents.hpp
include/SpringEngine/Graphics/: IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/SpringEngine/Layers/: DebugUILayer.hpp  ImGuiLayer.hpp  TestLayer.hpp  WorldLayer.hpp
include/SpringEngine/Misc/: Logger.hpp
lib/ImGui/: ImGuizmo.cpp
lib/ImGuiMaster/: ImGuizmo.h
ressources/shaders/: basic.glsl
ressources/sounds/: myBank.bank
src/Core/: Application.cpp  DataManager.cpp  Window.cpp
src/Layers/: DebugUILayer.cpp  ImGuiLayer.cpp
src/Misc/: Logger.cpp
